

v0.7.1.1 BETA:
  * Added comparing operator for some LunaLua classes.
  * Added PlayerSettings-Class