@@ -9,5 +9,6 @@
 HBITMAP CreateEmptyBitmap(int width, int height, int bpp, void** data);
 HBITMAP LoadGfxAsBitmap(const std::wstring& filename);
 std::tuple<std::vector<HBITMAP>, int> LoadAnimatedGfx(const std::wstring& filename);
+void GenerateScreenshot(const std::wstring& fName, const BITMAPINFOHEADER& header, void* pData);
 
 #endif
